guide demo link

--- a/1.1/demo/index.html
+++ b/1.1/demo/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-<h2>checkcode的demo</h2>
+<h2>checkcode的demo（<a href="../guide/index.html">文档</a>）</h2>
 <label for="J_CodeInput">输入验证码：</label>    
 <input id="J_CodeInput" class="i-text" type="text" name="code" value="" />
 <div id="J_CodeContainer" class="code-container"></div>
